sync changes from 1.21.3